[metadata]
name = ga-api-client-uf018127
version = 0.0.6
author = Jacob Chiang
author_email = jacob@genie-networks.com
description = GenieAnalytics API Client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uf018127/ga-api-client
project_urls =
    Bug Tracker = https://github.com/uf018127/ga-api-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src