[metadata]
name = ga-api-client-uf018127
version = 0.1.2
url = https://github.com/uf018127/ga-api-client
summary = GenieAnalytics API client
long_description = file: README.md
long_description_content_type = text/markdown
author = Jacob Chiang
author_email = jacob@genie-networks.com
home_page = https://github.com/uf018127/ga-api-client
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.9
packages = ga_api

[options.packages.find]
exclude = tests